--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
         <title>Colmar Academy</title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
-    <header>
-        <ul style="list-style-type: none;"></ul>
-          <li><h1 class="header"><strong><span>Colmar</span></strong><span style="color: gray">Academy</span></h1></li>
+    <header class="header">
+        <ul style="list-style-type: none;">
+          <li><h1><strong><span>Colmar</span></strong><span style="color: gray">Academy</span></h1></li>
           <div class="navigate">
             <li><a href=#oncampus>On campus</a></li>
             <li><a href=#online>Online</a></li>
             <li><a href=#online>For Companies</a></li>
             <li><a name="starthere"><a href=#signin>Sign in</a></a></li>
           </div>
-      </ul>
+        </ul>
     </header>
     <body>
-        <div class="banner">
-            <div class="oncampus">
+        <div class="oncampus">
+            <div class="campusimg">
                 <img src="resources/images/banner.jpg" class="imglarge">
-                <a name="signin"><h1>Learn something new everyday</h1></a>
-                <h3>Our student-centered, learning-focused strategies are based on research and success.</h3>
-                <div class="start-button">
-                    <a href=#starthere><h4>Start here</h4></a>
+                <div class="campustext">
+                    <a name="signin"><h1>Learn something</br>new everyday</h1></a></br>
+                    <h3>Our student-centered, learning-focused strategies</br>are based on research and success.</h3>
+                    <div class="start-button">
+                        <a href=#starthere><h4>Start here</h4></a>
+                    </div>            
                 </div>
             </div>
         </div>
