flex box to elements

--- a/index.html
+++ b/index.html
@@ -19,40 +19,53 @@
         <div class="oncampus">
             <div class="campusimg">
                 <img src="resources/images/banner.jpg" class="imglarge">
-                <div class="campustext">
-                    <a name="signin"><h1>Learn something</br>new everyday</h1></a></br>
-                    <h3>Our student-centered, learning-focused strategies</br>are based on research and success.</h3>
-                    <div class="start-button">
-                        <a href=#starthere><h4>Start here</h4></a>
-                    </div>            
-                </div>
+            </div>
+            <div class="campustext">
+                <a name="signin"><h1>Learn something</br>new everyday</h1></a></br>
+                <h3>Our student-centered, learning-focused strategies</br>are based on research and success.</h3>
+                <a href=#starthere class="start-button"><h4>Start here</h4></a>
             </div>
         </div>
             <div id="campus">
                 <div>
                     <a name="oncampus"><img src="resources/images/information-main.jpg" class="imglarge"></a>
                     <h2>It doesn't hurt to keep practicing</h2>
-                    <p>"Although the tendency is to give up, we must persevere.  Under the most trying of times, it is not our faults or difficulties that have shown through the test, but the outcome."</p>
+                    <p>"Although the tendency is to give up, we must persevere.  Under the most trying of times,</p>
+                    <p>it is not our faults or difficulties that have shown through the test, but the outcome."</p>
                     <p>Emanuel, Sr Strategist at Hiring.com</p>
                 </div>
-                <div>
+                <div class="campusimgs">
+                <tr>
+                    <td>
                     <img src="resources/images/information-orientation.jpg" class="imgsmall">
+                    </td>
+                    <td>
                     <h3>Orientation date</h3>
                     <p>Tue 10/ll & Wed 10/12: 8am-3pm</p>
                     <p>Read more</p>
-                </div>
-                <div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                     <img src="resources/images/information-campus.jpg" class="imgsmall">
+                    </td>
+                    <td>
                     <h3>Our campus</h3>
                     <p>Find which campus is close to you</p>
                     <p>Read more</p>
-                </div>
-                <div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                     <img src="resources/images/information-guest-lecture.jpg" class="imgsmall">
+                    </td>
+                    <td>
                     <h3>Our guest lecture</h3>
                     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                     <p>Read more</p>
-                </div>
+                    </td>
+                </tr>
+            </table>
             </div id="campus">
             <div id="learnonline">
                 <div>
@@ -96,7 +109,7 @@
                 </div>
             </div>
         <div>
-            <div>
+            <div class="thesis">
                 <h2>Thesis exhibit</h2>
                 <video width=60% controls>
                     <source src="resources/videos/thesis.mp4" type="video/mp4" class="video">
