--- a/index.html
+++ b/index.html
@@ -1,136 +1,191 @@
 <!DOCTYPE html>
-<html>
+<div>
     <head>
         <title>Colmar Academy</title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
     <header class="header">
-        <ul style="list-style-type: none;">
-          <li><h1><strong><span>Colmar</span></strong><span style="color: gray">Academy</span></h1></li>
-          <div class="navigate">
-            <li><a href=#oncampus>On campus</a></li>
-            <li><a href=#online>Online</a></li>
-            <li><a href=#online>For Companies</a></li>
-            <li><a name="starthere"><a href=#signin>Sign in</a></a></li>
-          </div>
-        </ul>
+        <div class="headerleft">
+            <h1><strong><span>Colmar</span></strong><span style="color: gray">Academy</span></h1>
+        </div> 
+        <div class="headerright">
+            <a href=#oncampus>On campus</a>
+            <a href=#online>Online</a>
+            <a href=#online>For Companies</a>
+            <a name="starthere"><a href=#signin>Sign in</a></a></li>
+        </div>
     </header>
-    <body>
-        <div class="oncampus">
-            <div class="campusimg">
+    <div>
+        <div class="boxes">
+        <div class="boxone">
+            <div class="boxoneleft">
                 <img src="resources/images/banner.jpg" class="imglarge">
             </div>
-            <div class="campustext">
-                <a name="signin"><h1>Learn something</br>new everyday</h1></a></br>
+            <div class="boxoneright">
+                <a name="signin"><h1>Learn something</br>new everyday</h1></a>
                 <h3>Our student-centered, learning-focused strategies</br>are based on research and success.</h3>
-                <a href=#starthere class="start-button"><h4>Start here</h4></a>
+                <div class="start-button">    
+                    <a href=#starthere><h4>Start here</h4></a>
+                </div>
             </div>
         </div>
-            <div id="campus">
-                <div>
+        <div class="boxtwo">
+            <div class="boxtwoleft">
+                <div class="boxtwoleftimg">
                     <a name="oncampus"><img src="resources/images/information-main.jpg" class="imglarge"></a>
+                </div>
+                <div class="boxtwolefttext">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Although the tendency is to give up, we must persevere.  Under the most trying of times,</p>
-                    <p>it is not our faults or difficulties that have shown through the test, but the outcome."</p>
+                    <p>it is not our faults or difficulties that have shown through the test, but the outcome."</p></br>
                     <p>Emanuel, Sr Strategist at Hiring.com</p>
+                </div>  
+            </div>
+            <div class="boxtworight">
+                <div class="orientation">
+                    <div id="orientationimg">
+                        <img src="resources/images/information-orientation.jpg" class="imgsmall">
+                    </div>
+                    <div id="orientationtext">
+                        <h3>Orientation date</h3>
+                        <p>Tue 10/ll & Wed 10/12: 8am-3pm</p>
+                        <a class="readmore">Read more</a>
+                    </div>
                 </div>
-                <div class="campusimgs">
-                <tr>
-                    <td>
-                    <img src="resources/images/information-orientation.jpg" class="imgsmall">
-                    </td>
-                    <td>
-                    <h3>Orientation date</h3>
-                    <p>Tue 10/ll & Wed 10/12: 8am-3pm</p>
-                    <p>Read more</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                    <img src="resources/images/information-campus.jpg" class="imgsmall">
-                    </td>
-                    <td>
-                    <h3>Our campus</h3>
-                    <p>Find which campus is close to you</p>
-                    <p>Read more</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                    <img src="resources/images/information-guest-lecture.jpg" class="imgsmall">
-                    </td>
-                    <td>
-                    <h3>Our guest lecture</h3>
-                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                    <p>Read more</p>
-                    </td>
-                </tr>
-            </table>
-            </div id="campus">
-            <div id="learnonline">
-                <div>
-                    <a name="online"><h2>Start learning</h2></a>
-                    <div>
+                <div class="ourcampus">
+                    <div id="ourcampusimg">
+                        <img src="resources/images/information-campus.jpg" class="imgsmall">
+                    </div>
+                    <div id="ourcampustext">
+                        <h3>Our campus</h3>
+                        <p>Find which campus is close to you</p>
+                        <a class="readmore">Read more</a>
+                    </div>
+                </div>
+                <div class="ourguestlecture">
+                    <div id="ourguestlectureimg">
+                        <img src="resources/images/information-guest-lecture.jpg" class="imgsmall">
+                    </div>
+                    <div id="ourguestlecturetext">
+                        <h3>Our guest lecture</h3>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <a class="readmore">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="boxthree">
+            <div class="boxthreetitle">
+                <a name="online"><h2>Start learning</h2></a>
+            </div>
+            <div class="learning">
+                <div class="sixbox">
+                    <div id="softimg">
                         <img src="resources/images/course-software.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Software engineering</h3>
                         <p>COURSES</p>
                         <p>Web Development, Mobile Development, iOT, APIs</p>
                     </div>
-                    <div>
+                </div>
+                <div class="sixbox">
+                    <div id="compimg">
                         <img src="resources/images/course-computer-art.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Computer art</h3>
                         <p>COURSES</p>
                         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                     </div>
-                    <div>
+                </div>
+                <div class="sixbox">
+                    <div id="designimg">
                         <img src="resources/images/course-design.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Design</h3>
                         <p>COURSES</p>
                         <p>User Experience Design, User Research, Visual Design</p>
                     </div>
-                    <div>
+                </div>
+                <div class="sixbox">
+                    <div id="dataimg">
                         <img src="resources/images/course-data.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Data</h3>
                         <p>COURSES</p>
                         <p>Data Science, Big Data, SQL, Data Visualization</p>
                     </div>
-                    <div>
+                </div>
+                <div class="sixbox">
+                    <div id="busimg">
                         <img src="resources/images/course-business.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Business</h3>
                         <p>COURSES</p>
                         <p>Product Development, Business Development, Startup</p>
                     </div>
-                    <div>
-                        <img src="resources/images/course-marketing.jpg" class="medium">
+                </div>
+                <div class="sixbox">
+                    <div id="markimg">
+                        <img src="resources/images/course-marketing.jpg" class="imgmedium">
+                    </div>
+                    <div id="text">
                         <h3>Marketing</h3>
                         <p>COURSES</p>
                         <p>Analytics, Content Marketing, Mobile Marketing</p>
                     </div>
                 </div>
             </div>
-        <div>
-            <div class="thesis">
+        </div>
+        <div class="boxfour">
+            <div class="boxfourheading">
                 <h2>Thesis exhibit</h2>
-                <video width=60% controls>
-                    <source src="resources/videos/thesis.mp4" type="video/mp4" class="video">
-                Video not supported.
-                </video>
+            </div>
+            <div class="boxfourcontent">
+                <div class="boxfourleft">
+                    <video width=100% controls>
+                        <source src="resources/videos/thesis.mp4" type="video/mp4" class="video">
+                        Video not supported.
+                    </video>
                 <h3>Reimagine urban</h3>
                 <p>"In a fast-paced, ever-growing, dynamic marketplace, it is imperative that the youth of America recognize their importance of the role of urban living."</p>
-                <img src="resources/images/thesis-fisma.jpg" class="imgsmall">
-                <h3>Fisma: Design and Prototype</h3>
-                <p>Designer showcase of new prototype product</p>
-                <img src="resources/images/thesis-now-and-then.jpg" class="imgsmall">
-                <h3>Now and then</h3>
-                <p>Research and study about New York</p>
+            </div>
+            <div class="boxfourright">
+                <div class="fisma" id="text">
+                    <div id="boxfourrightimg">
+                        <img src="resources/images/thesis-fisma.jpg" class="imgsmall">
+                    </div>
+                    <div id="boxfourrighttext">
+                        <h3>Fisma: Design and Prototype</h3>
+                        <p>Designer showcase of new prototype product</p>
+                    </div>
+                </div>
+                <div class="nowandthen" id="text">
+                    <div id="boxfourrightimg">
+                        <img src="resources/images/thesis-now-and-then.jpg" class="imgsmall">
+                    </div>
+                    <div id="boxfourrighttext">
+                        <h3>Now and then</h3>
+                        <p>Research and study about New York</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </body>
+    </div>
     <footer>
-        <p>Ⓒ Colmar Academy. All rights reserved</p>
-        <ul>
-            <li>Terms</li>
-            <li>Privacy</li>
+        <div class="foorterleft">
+            <p>Ⓒ Colmar Academy. All rights reserved</p>
+        </div>
+        <div class="footerright">
+            <a>Terms</a>
+            <a>Privacy</a>
+        </div>
         </ul>
     </footer>
+    </div>
+    </body>
 </html>
