--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a name="starthere"><a href=#signin>Sign in</a></a></li>
         </div>
     </header>
+    <body>
     <div>
         <div class="boxes">
         <div class="boxone">
@@ -42,7 +43,7 @@
                 </div>  
             </div>
             <div class="boxtworight">
-                <div class="orientation">
+                <div class="boxtwocontainer">
                     <div id="orientationimg">
                         <img src="resources/images/information-orientation.jpg" class="imgsmall">
                     </div>
@@ -52,7 +53,7 @@
                         <a class="readmore">Read more</a>
                     </div>
                 </div>
-                <div class="ourcampus">
+                <div class="boxtwocontainer">
                     <div id="ourcampusimg">
                         <img src="resources/images/information-campus.jpg" class="imgsmall">
                     </div>
@@ -62,7 +63,7 @@
                         <a class="readmore">Read more</a>
                     </div>
                 </div>
-                <div class="ourguestlecture">
+                <div class="boxtwocontainer">
                     <div id="ourguestlectureimg">
                         <img src="resources/images/information-guest-lecture.jpg" class="imgsmall">
                     </div>
