--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
     <head>
         <title>Colmar Academy</title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     </head>
     <header class="header">
         <div class="headerleft">
+            <img src="resources/images/ic-logo.svg">
             <h1><strong><span>Colmar</span></strong><span style="color: gray">Academy</span></h1>
-        </div> 
-        <div class="headerright">
+        </div>
+        <div class="iconbox">
+            <a href=#oncampus><img src="resources/images/ic-logo.svg" class="icon"></a>
+            <a href=#online><img src="resources/images/ic-on-campus.svg" class="icon"></a>
+            <a href=#online><img src="resources/images/ic-online.svg" class="icon"></a>
+            <a href=#signin><img src="resources/images/ic-login.svg" class="icon"></a>
+        </div>
+        <div class="navigate">
             <a href=#oncampus>On campus</a>
             <a href=#online>Online</a>
             <a href=#online>For Companies</a>
-            <a name="starthere"><a href=#signin>Sign in</a></a></li>
+            <a name="starthere"><a href=#signin>Sign in</a></a>
         </div>
     </header>
     <body>
